src/main/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  selector: {}
  template:
    spec:
      volumes:
        - name: cm-vol
          configMap:
            name: cm-vol
            optional: true
        - name: sec-vol
          secret:
            secretName: sec-vol
            optional: true
      containers:
        - name: main
          image: dpl-img
          imagePullPolicy: Always
          workingDir: /app
          volumeMounts:
            - name: cm-vol
              mountPath: /app/config
              readOnly: true
            - name: sec-vol
              mountPath: /app/secrets
              readOnly: true
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          resources:
            requests:
              memory: 256M
              cpu: 100m
            limits:
              memory: 512M
              cpu: 1000m
