src/main/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector: {}
  ports:
    - port: 8080
      targetPort: 8080
